--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -13,7 +13,7 @@ DB_DATABASE=social_test
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -35,10 +35,10 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=972923
+PUSHER_APP_KEY=30e7375a3c0c1535e595
+PUSHER_APP_SECRET=df8e8a70f945eafbe050
+PUSHER_APP_CLUSTER=us2
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
